--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "apexcharts": "^4.4.0",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "gsap": "^3.12.7",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-datepicker": "^4.8.0",
