--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nivo/pie": "^0.88.0",
     "@reduxjs/toolkit": "^2.5.1",
     "apexcharts": "^4.4.0",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "gsap": "^3.12.7",
