removed browser pop-up & bug solved

--- a/server/.env
+++ b/server/.env
@@ -1,13 +1,14 @@
 MONGODB_URL="mongodb://localhost:27017/Socialmediadashbord"
 FRONTEND_URL=http://localhost:3000
+BACKEND_URL =http://localhost:8080
 PORT=
 SECREAT_KEY=dashbord
 TWITTER_USERNAME=coder.paycheck944@passinbox.com
 TWITTER_PASSWORD=Hacker123
 GEMINI_API_KEY="AIzaSyAQ8xfXFjCOkkG35pZd0QC5TtVd7V9aWnA"
 TWITTER_BEARER_TOKEN="AAAAAAAAAAAAAAAAAAAAAIWcygEAAAAAg8rUZc%2BAfN4%2F%2FXd19CdRE40H6GA%3DlVwqTphszJrxNSA3aIuGm8IHQRYrCTH911uB1lKdU4G2MtP79a"
-CLIENT_ID="V21RQ2RjSkRSNFFQQlNZbl8zZDQ6MTpjaQ"
-CLIENT_SECREAT="zhHz2-qTNq8Kcsz8y8i5Yzw7o9EU68Ar4Wce8c3KNN2Ci9LAhU"
-CALLBACK_URL="https://7147-2409-40c1-4030-d700-14c8-466f-3a7c-69c9.ngrok-free.app/callback"
+CLIENT_ID="Z3hMX1FLV002V3hqQVA3d2U4UjA6MTpjaQ"
+CLIENT_SECREAT="MVDB6Qa0pJdzzOMA9nX8FWWl4cwfgY6-PE_jI0aFKqZiUVIoG-"
+CALLBACK_URL="https://9157-152-59-3-101.ngrok-free.app/callback"
 MAIL_USER="vandanrangani21@gmail.com"
 EMAIL_PASS="fvkljuzwjlwazrxb"
