--- a/server/.env
+++ b/server/.env
@@ -7,8 +7,12 @@ TWITTER_USERNAME=coder.paycheck944@passinbox.com
 TWITTER_PASSWORD=Hacker123
 GEMINI_API_KEY="AIzaSyAQ8xfXFjCOkkG35pZd0QC5TtVd7V9aWnA"
 TWITTER_BEARER_TOKEN="AAAAAAAAAAAAAAAAAAAAAIWcygEAAAAAg8rUZc%2BAfN4%2F%2FXd19CdRE40H6GA%3DlVwqTphszJrxNSA3aIuGm8IHQRYrCTH911uB1lKdU4G2MtP79a"
-CLIENT_ID="Z3hMX1FLV002V3hqQVA3d2U4UjA6MTpjaQ"
-CLIENT_SECREAT="MVDB6Qa0pJdzzOMA9nX8FWWl4cwfgY6-PE_jI0aFKqZiUVIoG-"
-CALLBACK_URL="https://9157-152-59-3-101.ngrok-free.app/callback"
+CLIENT_ID="V21RQ2RjSkRSNFFQQlNZbl8zZDQ6MTpjaQ"
+CLIENT_SECREAT="haseQI2IKvEEC4SJphvewstaw5uep5hjOAYd8uD8lwKtuxPS3E"
+CALLBACK_URL="https://b854-2409-40c1-403c-42ce-6d3c-987a-de74-b600.ngrok-free.app/callback"
 MAIL_USER="vandanrangani21@gmail.com"
 EMAIL_PASS="fvkljuzwjlwazrxb"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_SECURE=false
+CALLBACK_MAIL="vandanrangani21@gmail.com"
