--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.2",
     "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
