--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-apexcharts": "^1.7.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.2.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.29.0",
